controller work completed